--- a/doc/ifm-out.pod
+++ b/doc/ifm-out.pod
@@ -149,13 +149,10 @@ clauses only apply to things drawn in that style.  Now, if you declare
 rooms like this:
 
     room "At End Of Road";
-    room "Inside Building" style Water dir e go in;
+    room "Inside Building" dir e go in style Water;
 
 then the room "Inside Building" will be drawn with a light blue background.
-You can customize individual links in a similar manner.  Note that here you
-must put the 'style' clause before the 'dir' clause, so that the style
-applies to the room.  If it appeared afterwards, it would apply to the
-implicit link to the previous room instead.
+You can customize individual links in a similar manner.
 
 An alternative way to define a variable in a particular style is to use the
 'in style' clause, like this:
