--- a/contrib/README
+++ b/contrib/README
@@ -6,13 +6,10 @@ ifm.vim			Support for IFM syntax colouring in vim (a vi
 
 ifm-mode.el		GNU Emacs IFM mode.  This is a really bare-bones
 			major mode at the moment, and only exists so that
-			syntax highlighting can work on it (see below).
-
-ifm-hilite.el		GNU Emacs IFM syntax highlighting via hilit19.
-			Requires the ifm-mode.el stuff to be set up.
+			syntax highlighting can work on it.
 
 rec2scr			Perl script which invokes the dumb-frotz
-			interpreter (available from ftp.gmd.de) to
+			interpreter (available from the IF archive) to
 			non-interactively convert a recording of game
 			commands into a transcript.  Very useful for
 			testing the recording output from IFM.
